realtime wildcard fix

--- a/uitest/Pages/Counter.razor
+++ b/uitest/Pages/Counter.razor
@@ -11,9 +11,9 @@
     @foreach (var post in myposts)
     {
        <div class="container">
-        <h1>@post.test</h1>
+        <h1>@post.details</h1>
          
-        <h2>@post.post</h2>
+        <h2>@post.title</h2>
        </div>
     }
 }
