--- a/uitest/Pages/Counter.razor
+++ b/uitest/Pages/Counter.razor
@@ -6,7 +6,7 @@
 <PageTitle>Posts</PageTitle>
 
 
-@if (myposts is not null)
+@*@if (myposts is not null)
 {
     @foreach (var post in myposts)
     {
@@ -17,9 +17,9 @@
        </div>
     }
 }
-
+*@
 <img src="@imageurl" alt="its a image"  />
-<button @onclick="getFileurll">get img</button>
+<button @onclick="sub">get img</button>
 
 @code{
     private string imageurl = "";
